compiler/testData/diagnostics/nativeTests/prohibitKotlinPackageInNative.kt
// RUN_PIPELINE_TILL: FRONTEND
// IGNORE_FIR_DIAGNOSTICS
// ISSUE: KT-85764

// source.kt, compiled without `-Xallow-kotlin-package` CLI arg
<!KOTLIN_PACKAGE_USAGE!>package kotlin<!>

fun foo() = Unit
